...
        let nibCell = UINib(nibName: "BreedsTableViewCell", bundle: nil)
        tableView.register(nibCell.self, forCellReuseIdentifier: "breedCell")
    }
    
    private func setUpSearchBar(){
        searchBar.delegate = self
        searchBar.placeholder = "Search by breed name"
    }
    
    //MARK: InitListeners
    
    private func initListeners(){
        viewModel.listBreedsCatsRes = { [weak self] breeds in
...
